--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ crossorigin="anonymous"></script> </div>
             </div>
           </div>
           <div class="col-md-3 ">
-            <div class="card text-bg-light border-2 border-secondary">
+            <div class="card text-bg-light border-2 border-secondary" style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title">Facebook</h4>
                 <p class="card-text"><a href="https://web.facebook.com/creamyitim?locale=th_TH"
@@ -371,6 +371,10 @@ crossorigin="anonymous"></script> </div>
         </div>
       </div>
     </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
+crossorigin="anonymous"></script>
   </body>
 </html>
