--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
               <h4>Thontawee Onsee </h4>
             </div>
             <div class="row mt-3">
+              <h6> Student ID: </h6>
+              <h4>640510437 </h4>
+            </div>
+            <div class="row mt-3">
               <h6> Date of Birth: </h6>
               <h4>April 13, 2002 </h4>
             </div>
