--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/release/v6.4.2/css/all.css">
   </head>
   <body>
     <div class="“container”">
@@ -51,29 +52,31 @@
           <div class="col-md-4 mt-3 px-5"><img src="images/379996726_1505406966875229_6096399591783790180_n.jpg"
               alt="profile pics" class="img-fluid" height="900" width="900"></div>
           <div class="col-md-8">
-            <div class="row mt-3 px-5 text-center ">
+            <div class="row mt-5 mb-3 mx-auto text-center ">
               <h1>
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span></h1>
             </div>
-            <div class="row mt-3 px-5 text-center">
+            <div class="row mt-5 mb-3 mx-auto text-center">
               <h1>Hi, I'm itim </h1>
             </div>
-            <div class="row mt-3 px-5 text-center">
+            <div class="row mt-5 mb-3 mx-auto text-center">
               <h1> THONTAWEE ONSEE </h1>
             </div>
             <br>
-            <div class="row mx-auto text-center mt-3">
-              <div class="col-md-2 ms-5"> <a href="#abtme" target="_top"><img src="images/audience+customer+person+profile+user+icon-1320184120283383088-2.ico"
+            <div class="row mx-auto text-center mt-5">
+              <div class="col-md-2 mx-auto mb-2"> <a href="#abtme" target="_top"><img
+                    src="images/audience+customer+person+profile+user+icon-1320184120283383088-2.ico"
                     class="round" alt="about me" height="160" width="160"></a> </div>
-              <div class="col-md-2 ms-5"> <a href="#edu" target="_top"><img src="images/big.png"
-                    class="round" alt="education" height="160" width="160"></a></div>
-              <div class="col-md-2 ms-5"> <a href="#skills" target="_top"><img
+              <div class="col-md-2 mx-auto mb-2"> <a href="#edu" target="_top"><img
+                    src="images/big.png" class="round" alt="education" height="160"
+                    width="160"></a></div>
+              <div class="col-md-2 mx-auto mb-2"> <a href="#skills" target="_top"><img
                     src="images/super%20big.png" class="round" alt="education" height="160"
                     width="160"></a></div>
-              <div class="col-md-2 ms-5"> <a href="#contacts" target="_top"><img
+              <div class="col-md-2 mx-auto mb-2"> <a href="#real-contact" target="_top"><img
                     src="images/education+eml+message+send+icon-1320184125808153118.ico"
                     class="round" alt="education" height="160" width="160"></a></div>
             </div>
@@ -83,7 +86,7 @@
       </div>
       <br>
       <br>
-      <div class="container mt-5">
+      <div class="container mt-5 mb-5">
         <div class="row mt-5">
           <div class="col-md-6 mt-5">
             <h1><a name="abtme" id="abtme"></a>About Me </h1>
@@ -120,60 +123,60 @@
       </div>
       <br>
       <br>
-      <div class="container mt-5">
+      <div class="container mt-5 mb-5">
         <div class="row mt-5">
           <div class="col-md-12 mx-auto text-center mt-5">
             <h1> <a name="edu" id="edu"></a>Education </h1>
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-md-12">
+          <div class="col-md-12 mt-5">
             <div class="position-relative m-4">
               <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="50"
                 aria-valuemin="0" aria-valuemax="100" style="height: 6px;">
                 <div class="progress-bar text-bg-dark" style="width: 100%"></div>
               </div>
-              <button type="button  " class="position-absolute top-0 start-0 translate-middle btn btn-sm  btn-dark rounded-pill"
-                style="width: 5rem; height:5rem;">2014</button> <button type="button"
-                class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-dark rounded-pill"
-                style="width: 5rem; height:5rem;">2017</button> <button type="button"
-                class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-dark rounded-pill"
-                style="width: 5rem; height:5rem;">2020</button> </div>
+              <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm  btn-dark rounded-pill text-warning "
+                style="width: 5rem; height:5rem;">
+                <h6> 2014 </h6>
+              </button> <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-dark rounded-pill text-warning "
+                style="width: 5rem; height:5rem;">
+                <h6> 2017 </h6>
+              </button> <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-dark rounded-pill text-warning"
+                style="width: 5rem; height:5rem;">
+                <h6> 2020 </h6>
+              </button> </div>
           </div>
         </div>
-      </div>
-      <div class="container">
         <div class="row mt-5 ">
-          <div class="col-md-4 ">
+          <div class="col-md-4 mt-5 ">
             <h4> Junior High School </h4>
-            <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+            <div class="card mt-3 text-bg-dark mb-3" style="max-width: 20rem;">
               <div class="card-header">GPAX 3.90</div>
-              <div class="card-body">
-                <h5 class="card-title">Nakaesamakki-</h5>
-                <h5 class="card-title">wittaya School</h5>
+              <div class="card-body text-center">
+                <h5 class="card-title text-info">Nakaesamakkiwittaya School</h5>
                 <p class="card-text">Studied in Mini English Program (MEP)</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mt-5 ">
             <h4>Senior High School </h4>
-            <div class="card text-bg-light mb-3  border-3 border-dark" style="max-width: 18rem;">
+            <div class="card mt-3 text-bg-light mb-3  border-3 border-dark" style="max-width: 20rem;">
               <div class="card-header">GPAX 3.80</div>
-              <div class="card-body">
-                <h5 class="card-title">Nakaesamakki-</h5>
-                <h5 class="card-title">wittaya School</h5>
-                <p class="card-text">Studied in Gifted Program (Sci-Math)</p>
+              <div class="card-body text-center">
+                <h5 class="card-title text-success">Nakaesamakkiwittaya School</h5>
+                <p class="card-text">Studied in Science-Math Program (Gifted)</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 ">
+          <div class="col-md-4 mt-5  ">
             <h4> University </h4>
-            <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+            <div class="card mt-3 text-bg-dark mb-3" style="max-width: 20rem;">
               <div class="card-header">Faculty of Arts</div>
-              <div class="card-body">
-                <h5 class="card-title">Silpakorn University</h5>
-                <p class="card-text"> Information and Library Science Major,
-                  English Minor </p>
+              <div class="card-body text-center">
+                <h5 class="card-title text-info">Silpakorn University</h5>
+                <p class="card-text"> Studies in Information and Library Science
+                  Major, English Minor </p>
               </div>
             </div>
           </div>
@@ -181,78 +184,84 @@
       </div>
       <br>
       <br>
-      <div class="container">
+      <div class="container mt-5 mb-5">
         <div class="row mt-5 mx-auto text-center">
           <h1> <a name="skills" id="skills"></a>SKILLS </h1>
-          <div class="col-md-6"> <img src="images/90.png" class="rounded" alt="90 percent"
-              height="100" width="100">
-            <h6> Creativity </h6>
-          </div>
-          <div class="col-md-6"> <img src="images/85.png" class="rounded" alt="85 percent"
-              height="100" width="100">
-            <h6> Microsoft Suite </h6>
-          </div>
-          <div class="col-md-6"> <img src="images/80.png" class="rounded" alt="85 percent"
-              height="100" width="100">
-            <h6> Communication </h6>
-          </div>
-          <div class="col-md-6"> <img src="images/75.png" class="rounded" alt="80 percent"
-              height="100" width="100">
-            <h6>Graphic Design </h6>
-          </div>
-          <div class="col-md-6"> <img src="images/60.png" class="rounded" alt="85 percent"
-              height="100" width="100">
-            <h6> Illustration</h6>
-          </div>
-          <div class="col-md-6"> <img src="images/50.png" class="rounded" alt="85 percent"
-              height="100" width="100">
-            <h6> Management</h6>
-          </div>
+          <div class="col-md-6 mt-5"> <img src="images/90.png" class="rounded"
+              alt="90 percent" height="180" width="180">
+            <h5> Creativity </h5>
+            <hr> </div>
+          <div class="col-md-6 mt-5"> <img src="images/85.png" class="rounded"
+              alt="85 percent" height="180" width="180">
+            <h5> Microsoft Suite </h5>
+            <hr> </div>
+          <div class="col-md-6 mt-5"> <img src="images/80.png" class="rounded"
+              alt="85 percent" height="180" width="180">
+            <h5> Communication </h5>
+            <hr> </div>
+          <div class="col-md-6 mt-5"> <img src="images/75.png" class="rounded"
+              alt="80 percent" height="180" width="180">
+            <h5>Graphic Design </h5>
+            <hr> </div>
+          <div class="col-md-6 mt-5"> <img src="images/60.png" class="rounded"
+              alt="85 percent" height="180" width="180">
+            <h5> Illustration</h5>
+            <hr> </div>
+          <div class="col-md-6 mt-5"> <img src="images/50.png" class="rounded"
+              alt="85 percent" height="180" width="180">
+            <h5> Management</h5>
+            <hr> </div>
         </div>
       </div>
       <br>
       <br>
       <div class="container mt-5">
-        <div class="row  mt-5 mx-auto text-center">
+        <div class="row  mt-5 mb-5 mx-auto text-center">
           <h1> LANGUAGES </h1>
           <br>
           <br>
+          <br>
+          <br>
           <div class="row  mt-5 mx-auto text-center">
-            <div class="col-md-4 mt-4 text-danger">
+            <div class="col-md-4 mt-4 text-danger ">
               <h3> THAI </h3>
             </div>
-            <div class="col-md-8 mt-5">
+            <div class="col-md-8 mb-5 mt-4">
               <div class="progress" role="progressbar" aria-label="Success example"
                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar bg-danger" style="width: 100%">100%</div>
               </div>
             </div>
-            <div class="row  mt-5 mx-auto text-center">
-              <div class="col-md-4 mt-4 text-warning">
-                <h3> ENGLISH</h3>
-              </div>
-              <div class="col-md-8 mt-5">
-                <div class="progress" role="progressbar" aria-label="Success example"
-                  aria-valuenow="75" aria-valuemin="0" aria-valuemax="75">
-                  <div class="progress-bar bg-warning" style="width: 75%">75%</div>
-                </div>
+          </div>
+          <br>
+          <br>
+          <div class="row  mt-5 mx-auto text-center">
+            <div class="col-md-4 mt-4 text-warning">
+              <h3> ENGLISH</h3>
+            </div>
+            <div class="col-md-8 mt-4 mb-5">
+              <div class="progress" role="progressbar" aria-label="Success example"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="75">
+                <div class="progress-bar bg-warning" style="width: 75%">75%</div>
               </div>
             </div>
-            <div class="row  mt-5 mx-auto text-center">
-              <div class="col-md-4 mt-4 text-info">
-                <h3>KOREAN</h3>
-              </div>
-              <div class="col-md-8 mt-5">
-                <div class="progress" role="progressbar" aria-label="Success example"
-                  aria-valuenow="40" aria-valuemin="0" aria-valuemax="40">
-                  <div class="progress-bar bg-info" style="width: 40%">40%</div>
-                </div>
+          </div>
+          <br>
+          <br>
+          <div class="row  mt-5 mx-auto text-center">
+            <div class="col-md-4 mt-4 text-info">
+              <h3>KOREAN</h3>
+            </div>
+            <div class="col-md-8 mt-4 mb-5">
+              <div class="progress" role="progressbar" aria-label="Success example"
+                aria-valuenow="40" aria-valuemin="0" aria-valuemax="40">
+                <div class="progress-bar bg-info" style="width: 40%">40%</div>
               </div>
             </div>
           </div>
         </div>
-        <br>
       </div>
+      <br>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -260,11 +269,12 @@ crossorigin="anonymous"></script> <br>
     <br>
     <div class="contaniner mt-5">
       <div class="row mt-5">
-        <div class="col-md-12 mx-auto text-center mt-5 "><img src="images/379658088_289078487228790_3725313194698139949_n.jpg"
-            class="rounded-circle " alt="contacs" height="250" width="200"></div>
+        <div class="col-md-12 mx-auto text-center mt-5 "><a name="ct-me" id="ct-me"></a><a
+            id="real-contact"><img src="images/379658088_289078487228790_3725313194698139949_n.jpg"
+              class="rounded-circle " alt="contacs" height="250" width="200"></a></div>
       </div>
-      <div class="row mt-4">
-        <div class="col-md-12 mx-auto text-center">
+      <div class="row mt-4 mb-5">
+        <div class="col-md-12 mt-4 mb-5 mx-auto text-center">
           <h1> <a name="contacts" id="contacts"></a>Contact Me </h1>
         </div>
       </div>
@@ -272,7 +282,8 @@ crossorigin="anonymous"></script> <br>
         <div class="row mt-5 mx-auto-text-center">
           <div class="col-md-3 mx-auto text-center"><img src="images/emails+mail+message+icon-1320166531906158724.ico"
               alt="email">
-            <div class="card text-bg-light border-2 border-secondary " style="width: 15rem;">
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary "
+              style="width: 15rem;">
               <div class="card-body ">
                 <h4 class="card-title"><a name="email" id="email"></a>Email</h4>
                 <p class="card-text"><a href="mailto:creamthontawee@gmail.com" target="_blank">Send
@@ -282,7 +293,8 @@ crossorigin="anonymous"></script> <br>
           </div>
           <div class="col-md-3 mx-auto text-center"><img src="images/contact+us+contacts+phone+support+telephone+icon-1320166528627385734-5.png"
               alt="telephone">
-            <div class="card text-bg-light border-2 border-secondary" style="width: 15rem;">
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+              style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title ">Tel.</h4>
                 <p class="card-text text-secondary">063-646xxxx</p>
@@ -291,7 +303,8 @@ crossorigin="anonymous"></script> <br>
           </div>
           <div class="col-md-3 mx-auto text-center"><img src="images/facebook+icon-1320168274153302667.ico"
               alt="facebook">
-            <div class="card text-bg-light border-2 border-secondary" style="width: 15rem;">
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+              style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title">Facebook</h4>
                 <p class="card-text"><a href="https://web.facebook.com/creamyitim?locale=th_TH"
@@ -301,7 +314,8 @@ crossorigin="anonymous"></script> <br>
           </div>
           <div class="col-md-3 mx-auto text-center"><img src="images/instagram+network+photo+picture+share+social+icon-1320186097323062666.ico"
               alt="ig">
-            <div class="card text-bg-light border-2 border-secondary" style="width: 15rem;">
+            <div class="card mx-auto mt-5 mb-5 text-center text-bg-light border-2 border-secondary"
+              style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title">Instagram</h4>
                 <p class="card-text text-secondary"><a href="https://www.instagram.com/creamy2mb/"
@@ -312,6 +326,9 @@ crossorigin="anonymous"></script> <br>
         </div>
       </div>
     </div>
+    <br>
+    <section> </section>
+    <a class="gotopbtn" href="#"> <span class="material-icon"> TOP!</span> </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
