--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Fahkwang&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Fahkwang&amp;display=swap"
+
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    <title>Resume of itim</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/release/v6.4.2/css/all.css">
@@ -17,23 +20,29 @@
   <body>
     <div class="“container”">
       <div class="“row”">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body"
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body"
+
           data-bs-theme="dark">
           <div class="container-fluid"> <a class="navbar-brand" href="#">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+
               aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav nav-underline me-auto mb-2 mb-lg-0">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page"
+                <li class="nav-item"> <a class="nav-link active" aria-current="page"
+
                     href="#abtme" target="_top">About Me</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#edu" target="_top">Education</a>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#skills" target="_top">Skills</a>
                 </li>
-                <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"
-                    href="#contacts" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"
+
+                    href="#contacts" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+
                     target="_top"> Contacts</a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Email</a></li>
@@ -49,7 +58,8 @@
       <br>
       <div class="container-fluid">
         <div class="row mt-3">
-          <div class="col-md-4 mt-3 px-5"><img src="images/379996726_1505406966875229_6096399591783790180_n.jpg"
+          <div class="col-md-4 mt-3 px-5"><img src="images/379996726_1505406966875229_6096399591783790180_n.jpg"
+
               alt="profile pics" class="img-fluid" height="900" width="900"></div>
           <div class="col-md-8">
             <div class="row mt-5 mb-3 mx-auto text-center ">
@@ -67,17 +77,25 @@
             </div>
             <br>
             <div class="row mx-auto text-center mt-5">
-              <div class="col-md-2 mx-auto mb-2"> <a href="#abtme" target="_top"><img
-                    src="images/audience+customer+person+profile+user+icon-1320184120283383088-2.ico"
+              <div class="col-md-2 mx-auto mb-2"> <a href="#abtme" target="_top"><img
+
+                    src="images/audience+customer+person+profile+user+icon-1320184120283383088-2.ico"
+
                     class="round" alt="about me" height="160" width="160"></a> </div>
-              <div class="col-md-2 mx-auto mb-2"> <a href="#edu" target="_top"><img
-                    src="images/big.png" class="round" alt="education" height="160"
+              <div class="col-md-2 mx-auto mb-2"> <a href="#edu" target="_top"><img
+
+                    src="images/big.png" class="round" alt="education" height="160"
+
                     width="160"></a></div>
-              <div class="col-md-2 mx-auto mb-2"> <a href="#skills" target="_top"><img
-                    src="images/super%20big.png" class="round" alt="education" height="160"
+              <div class="col-md-2 mx-auto mb-2"> <a href="#skills" target="_top"><img
+
+                    src="images/super%20big.png" class="round" alt="education" height="160"
+
                     width="160"></a></div>
-              <div class="col-md-2 mx-auto mb-2"> <a href="#real-contact" target="_top"><img
-                    src="images/education+eml+message+send+icon-1320184125808153118.ico"
+              <div class="col-md-2 mx-auto mb-2"> <a href="#real-contact" target="_top"><img
+
+                    src="images/education+eml+message+send+icon-1320184125808153118.ico"
+
                     class="round" alt="education" height="160" width="160"></a></div>
             </div>
           </div>
@@ -117,7 +135,8 @@
               <h4> DIY crafts, crochet, and reading </h4>
             </div>
           </div>
-          <div class="col-md-6 auto-mx-0 mt-5"><img src="images/380478142_861617222000121_4119991443616287133_n.jpg"
+          <div class="col-md-6 auto-mx-0 mt-5"><img src="images/380478142_861617222000121_4119991443616287133_n.jpg"
+
               alt="about me" class="img-fluid" height="500" width="500"></div>
         </div>
       </div>
@@ -132,17 +151,21 @@
         <div class="row mt-5">
           <div class="col-md-12 mt-5">
             <div class="position-relative m-4">
-              <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="50"
+              <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="50"
+
                 aria-valuemin="0" aria-valuemax="100" style="height: 6px;">
                 <div class="progress-bar text-bg-dark" style="width: 100%"></div>
               </div>
-              <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm  btn-dark rounded-pill text-warning "
+              <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm  btn-dark rounded-pill text-warning "
+
                 style="width: 5rem; height:5rem;">
                 <h6> 2014 </h6>
-              </button> <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-dark rounded-pill text-warning "
+              </button> <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-dark rounded-pill text-warning "
+
                 style="width: 5rem; height:5rem;">
                 <h6> 2017 </h6>
-              </button> <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-dark rounded-pill text-warning"
+              </button> <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-dark rounded-pill text-warning"
+
                 style="width: 5rem; height:5rem;">
                 <h6> 2020 </h6>
               </button> </div>
@@ -187,27 +210,33 @@
       <div class="container mt-5 mb-5">
         <div class="row mt-5 mx-auto text-center">
           <h1> <a name="skills" id="skills"></a>SKILLS </h1>
-          <div class="col-md-6 mt-5"> <img src="images/90.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/90.png" class="rounded"
+
               alt="90 percent" height="180" width="180">
             <h5> Creativity </h5>
             <hr> </div>
-          <div class="col-md-6 mt-5"> <img src="images/85.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/85.png" class="rounded"
+
               alt="85 percent" height="180" width="180">
             <h5> Microsoft Suite </h5>
             <hr> </div>
-          <div class="col-md-6 mt-5"> <img src="images/80.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/80.png" class="rounded"
+
               alt="85 percent" height="180" width="180">
             <h5> Communication </h5>
             <hr> </div>
-          <div class="col-md-6 mt-5"> <img src="images/75.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/75.png" class="rounded"
+
               alt="80 percent" height="180" width="180">
             <h5>Graphic Design </h5>
             <hr> </div>
-          <div class="col-md-6 mt-5"> <img src="images/60.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/60.png" class="rounded"
+
               alt="85 percent" height="180" width="180">
             <h5> Illustration</h5>
             <hr> </div>
-          <div class="col-md-6 mt-5"> <img src="images/50.png" class="rounded"
+          <div class="col-md-6 mt-5"> <img src="images/50.png" class="rounded"
+
               alt="85 percent" height="180" width="180">
             <h5> Management</h5>
             <hr> </div>
@@ -227,7 +256,8 @@
               <h3> THAI </h3>
             </div>
             <div class="col-md-8 mb-5 mt-4">
-              <div class="progress" role="progressbar" aria-label="Success example"
+              <div class="progress" role="progressbar" aria-label="Success example"
+
                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar bg-danger" style="width: 100%">100%</div>
               </div>
@@ -240,7 +270,8 @@
               <h3> ENGLISH</h3>
             </div>
             <div class="col-md-8 mt-4 mb-5">
-              <div class="progress" role="progressbar" aria-label="Success example"
+              <div class="progress" role="progressbar" aria-label="Success example"
+
                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="75">
                 <div class="progress-bar bg-warning" style="width: 75%">75%</div>
               </div>
@@ -253,7 +284,8 @@
               <h3>KOREAN</h3>
             </div>
             <div class="col-md-8 mt-4 mb-5">
-              <div class="progress" role="progressbar" aria-label="Success example"
+              <div class="progress" role="progressbar" aria-label="Success example"
+
                 aria-valuenow="40" aria-valuemin="0" aria-valuemax="40">
                 <div class="progress-bar bg-info" style="width: 40%">40%</div>
               </div>
@@ -263,14 +295,18 @@
       </div>
       <br>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
 crossorigin="anonymous"></script> <br>
     <br>
     <div class="contaniner mt-5">
       <div class="row mt-5">
-        <div class="col-md-12 mx-auto text-center mt-5 "><a name="ct-me" id="ct-me"></a><a
-            id="real-contact"><img src="images/379658088_289078487228790_3725313194698139949_n.jpg"
+        <div class="col-md-12 mx-auto text-center mt-5 "><a name="ct-me" id="ct-me"></a><a
+
+            id="real-contact"><img src="images/379658088_289078487228790_3725313194698139949_n.jpg"
+
               class="rounded-circle " alt="contacs" height="250" width="200"></a></div>
       </div>
       <div class="row mt-4 mb-5">
@@ -280,9 +316,11 @@ crossorigin="anonymous"></script> <br>
       </div>
       <div class="container">
         <div class="row mt-5 mx-auto-text-center">
-          <div class="col-md-3 mx-auto text-center"><img src="images/emails+mail+message+icon-1320166531906158724.ico"
+          <div class="col-md-3 mx-auto text-center"><img src="images/emails+mail+message+icon-1320166531906158724.ico"
+
               alt="email">
-            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary "
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary "
+
               style="width: 15rem;">
               <div class="card-body ">
                 <h4 class="card-title"><a name="email" id="email"></a>Email</h4>
@@ -291,9 +329,11 @@ crossorigin="anonymous"></script> <br>
               </div>
             </div>
           </div>
-          <div class="col-md-3 mx-auto text-center"><img src="images/contact+us+contacts+phone+support+telephone+icon-1320166528627385734-5.png"
+          <div class="col-md-3 mx-auto text-center"><img src="images/contact+us+contacts+phone+support+telephone+icon-1320166528627385734-5.png"
+
               alt="telephone">
-            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+
               style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title ">Tel.</h4>
@@ -301,24 +341,30 @@ crossorigin="anonymous"></script> <br>
               </div>
             </div>
           </div>
-          <div class="col-md-3 mx-auto text-center"><img src="images/facebook+icon-1320168274153302667.ico"
+          <div class="col-md-3 mx-auto text-center"><img src="images/facebook+icon-1320168274153302667.ico"
+
               alt="facebook">
-            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+            <div class="card mx-auto text-center mt-5 mb-5 text-bg-light border-2 border-secondary"
+
               style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title">Facebook</h4>
-                <p class="card-text"><a href="https://web.facebook.com/creamyitim?locale=th_TH"
+                <p class="card-text"><a href="https://web.facebook.com/creamyitim?locale=th_TH"
+
                     target="_blank">CreamThon MTR</a></p>
               </div>
             </div>
           </div>
-          <div class="col-md-3 mx-auto text-center"><img src="images/instagram+network+photo+picture+share+social+icon-1320186097323062666.ico"
+          <div class="col-md-3 mx-auto text-center"><img src="images/instagram+network+photo+picture+share+social+icon-1320186097323062666.ico"
+
               alt="ig">
-            <div class="card mx-auto mt-5 mb-5 text-center text-bg-light border-2 border-secondary"
+            <div class="card mx-auto mt-5 mb-5 text-center text-bg-light border-2 border-secondary"
+
               style="width: 15rem;">
               <div class="card-body">
                 <h4 class="card-title">Instagram</h4>
-                <p class="card-text text-secondary"><a href="https://www.instagram.com/creamy2mb/"
+                <p class="card-text text-secondary"><a href="https://www.instagram.com/creamy2mb/"
+
                     target="_blank">@creamy2mb</a></p>
               </div>
             </div>
@@ -329,8 +375,10 @@ crossorigin="anonymous"></script> <br>
     <br>
     <section> </section>
     <a class="gotopbtn" href="#"> <span class="material-icon"> TOP!</span> </a>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
 crossorigin="anonymous"></script>
   </body>
 </html>
