--- a/index.html
+++ b/index.html
@@ -135,9 +135,45 @@
               <h4> DIY crafts, crochet, and reading </h4>
             </div>
           </div>
-          <div class="col-md-6 auto-mx-0 mt-5"><img src="images/380478142_861617222000121_4119991443616287133_n.jpg"
-
-              alt="about me" class="img-fluid" height="500" width="500"></div>
+          <div class="col-md-6 auto-mx-0 mt-5"><div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/exp01.jpg" class="d-block w-100" alt="…">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>อักษราวิชาการ</h5>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src=" images/exp02.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>อักษราวิชาการ</h5>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src=" images/exp03.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>อักษราวิชาการ</h5>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
         </div>
       </div>
       <br>
