--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span></h1>
+              <div class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      
+      <div class="modal-body">
+        <p> cooking like a chef i'm a 5 star michelin~ </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Go go!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
             </div>
             <div class="row mt-5 mb-3 mx-auto text-center">
               <h1>Hi, I'm itim </h1>
@@ -143,21 +157,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/exp01.jpg" class="d-block w-100" alt="…">
+      <img src="images/exp01.jpg" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp02.jpg" class="d-block w-100" alt="...">
+      <img src=" images/exp02.jpg" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp03.jpg" class="d-block w-100" alt="...">
+      <img src=" images/exp03.jpg" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
