--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <p> cooking like a chef i'm a 5 star michelin~ </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Go go!</button>
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">
+          <link href=https://www.youtube.com/watch?v=TQTlCHxyuu8&pp=ygUqY29va2luZyBsaWtlIGEgY2hlZiBpJ20gYSA1IHN0YXIgbWljaGVsaW4g>
+          Go go!</button>
       </div>
     </div>
   </div>
